# hivemind

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  Readme.md  Xargo.toml
.cargo/: config
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  macros.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  cpu.rs  grub.cfg  linker.ld  long_mode_init.asm  mod.rs  multiboot_header.asm
src/database/: mod.rs  transaction.rs
src/drivers/: keyboard.rs  mod.rs  pic.rs  rtc.rs  vga.rs
src/interrupts/: event.rs  gdt.rs  mod.rs  pic.rs
src/memory/: area_frame_allocator.rs  heap_allocator.rs  interrupts.rs  mod.rs  stack_allocator.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
tests/: basic_boot.rs  heap_allocation.rs  panic_handler.rs  stack_overflow.rs  test.rs
