[package]
name = "hivemind"
version = "0.0.1"
authors = ["cmontella@live.com"]

[dependencies]
bootloader = "0.6.0"
mech-core = {git = "https://gitlab.com/mech-lang/core", features = ["no-std"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-hivemind.json"