[package]
name = "hivemind"
version = "0.0.1"
authors = ["cmontella@live.com"]

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
mech-core = {git = "https://gitlab.com/mech-lang/core", features = ["no-std"]}
spin = "0.4.9"
x86_64 = "0.6.0"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-hivemind.json"
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300