[package]
name = "hivemind"
version = "0.0.1"
authors = ["cmontella@live.com"]

[[test]]
name = "panic_handler"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.6.4", features = ["map_physical_memory"]}
volatile = "0.2.3"
mech-core = {git = "https://gitlab.com/mech-lang/core", features = ["no-std"]}
spin = "0.4.9"
x86_64 = "0.7.0"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
linked_list_allocator = "0.6.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-hivemind.json"
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
